# ndi-data-browser-v2

./: .dockerignore  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  lighthouserc.json
.githooks/: pre-commit
.github/workflows/: ci.yml  e2e.yml  load-test.yml  nightly-contract.yml  pr-branch-freshness.yml  rollout-health.yml  xlsx-cdn-advisory-check.yml
backend/: .env.example  SERVICE_DEPENDENCIES.md  __init__.py  app.py  config.py  errors.py  pyproject.toml  requirements.txt  static_files.py
backend/auth/: cookie_attrs.py  dependencies.py  login.py  session.py  token_refresh.py
backend/cache/: redis_table.py  ttl.py
backend/clients/: _url_allowlist.py  circuit_breaker.py  ndi_cloud.py
backend/data/: ontology_warmup.json
backend/middleware/: cache_control.py  csrf.py  metrics.py  origin_enforcement.py  rate_limit.py  request_id.py  security_headers.py
backend/observability/: logging.py  metrics.py  tracing.py
backend/routers/: _cancel.py  _deps.py  _validators.py  aggregate_documents.py  auth.py  binary.py  datasets.py  documents.py  health.py  image.py  ndi_dataset.py  ontology.py  psth.py  query.py  signal.py  spike_summary.py  tables.py  tabular_query.py  treatment_timeline.py  visualize.py
backend/services/: aggregate_documents_service.py  binary_service.py  dataset_binding_service.py  dataset_provenance_service.py  dataset_service.py  dataset_summary_service.py  dependency_graph_service.py  document_service.py  facet_service.py  file_format 2.py  file_format.py  image_service.py  ndi_python_service.py  ontology_cache.py  ontology_service.py  pivot_service.py  psth_service.py  query_service.py  signal_service.py  spike_summary_service.py  summary_table_service.py  tabular_query_service.py  treatment_timeline_service.py  visualize_service.py
backend/tests/: conftest.py
backend/tests/contract/: test_cloud_contract.py
backend/tests/fixtures/openminds/: README.md  haley_openminds_biologicalsex.json  haley_openminds_geneticstraintype.json  haley_openminds_species.json  haley_openminds_strain.json  vanhooser_openminds_biologicalsex.json  vanhooser_openminds_species.json  vanhooser_openminds_species_alt.json
backend/tests/integration/: conftest.py  test_auth_proxy.py  test_dataset_binding_live.py  test_routes.py
backend/tests/load/: assert_gates.py  locustfile.py
backend/tests/unit/: test_aggregate_documents_service.py  test_binary_shape.py  test_cache.py  test_cache_control_middleware.py  test_cache_isolation.py  test_circuit_breaker.py  test_cloud_client.py  test_cookie_attrs.py  test_csrf.py  test_csrf_rate_limit.py  test_dataset_binding_service.py  test_dataset_provenance_service.py  test_dataset_service.py  test_dataset_summary_service.py  test_dependencies.py  test_dependency_graph.py  test_deps.py  test_document_normalize.py  test_document_service_inline_fallback.py  test_document_service_resolve_ndi_id.py  test_errors.py  test_facet_service.py  test_facet_service_dedupe.py  test_image_service.py  test_ndi_python_service.py  test_no_phi_in_logs.py  test_ontology_cache.py  test_ontology_service.py  test_ontology_tables.py  test_openminds_shape.py  test_origin_enforcement.py  test_pivot_service.py  test_proxy_headers_config.py  test_psth_service.py  test_query_service.py  test_rate_limiter.py  test_redis_table_cache.py  test_security_headers.py  test_services_http_boundary.py  test_session_idle_ttl.py  (+13 more)
docs/: RUNBOOK.md  architecture.md  cutover-plan.md  error-catalog.md  operations.md  v0-v1-v2-audit.md  workflows.md
docs/adr/: 001-proxy-backend.md  002-session-cookies-not-jwt-in-js.md  003-redis-sessions.md  004-drop-sqlite-dataset-storage.md  005-cognito-refresh-tokens.md  006-react-router-over-tanstack.md  007-summary-table-enrichment.md  008-deprecate-cognito-refresh-flow.md  009-services-http-client-boundary.md  010-dataset-summary-synthesizer.md  011-dataset-provenance.md  011-grain-selectable-pivot.md  012-grain-selectable-pivot.md  013-cross-dataset-facet-aggregation.md  014-dual-csp-architecture.md
docs/plans/: 2026-05-13-ndi-python-integration.md  2026-05-13-railway-experimental-env-runbook.md  cross-repo-unification-2026-04-24.md  spike-0-amendments.md
docs/plans/spike-0-reports/: spike0-A-ndi-cloud-node.md  spike0-B-ndi-python.md  spike0-C-ndi-matlab.md  spike0-D-schema-and-v1.md
docs/reviews/: Audit_2026-04-23.md
frontend/: .env.example  eslint.config.js  index.html  node_modules  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx  ndi-tailwind-theme.css  ndi-tokens.css  vite-env.d.ts
frontend/src/api/: auth.ts  binary.ts  client.ts  datasets.ts  documents.ts  errors.ts  ontology.ts  query.ts  tables.ts  visualize.ts
frontend/src/components/: ExternalAnchor.test.tsx  ExternalAnchor.tsx
frontend/src/components/datasets/: CiteModal.test.tsx  CiteModal.tsx  DatasetCard.test.tsx  DatasetCard.tsx  DatasetProvenanceCard.test.tsx  (+8 more)
frontend/src/data/: table-column-definitions.test.ts  table-column-definitions.ts
frontend/src/lib/: citation-formats.test.ts  citation-formats.ts  config.ts  format.ts  orcid.test.ts  orcid.ts  safe-href.test.ts  safe-href.ts  useDocumentTitle.ts
frontend/src/pages/: AboutPage.tsx  DatasetDetailPage.test.tsx  DatasetDetailPage.tsx  DatasetsPage.tsx  DocumentDetailPage.tsx  DocumentExplorerPage.tsx  DocumentsListPage.tsx  HomePage.tsx  LoginPage.tsx  MyDatasetsPage.tsx  NotFoundPage.tsx  QueryPage.tsx  TableTab.tsx
frontend/src/test/: setup.ts
frontend/src/types/: dataset-provenance.ts  dataset-summary.ts  facets.ts
frontend/tests-e2e/: a11y.spec.ts  auth.spec.ts  error-recovery.spec.ts  m4a-tables.spec.ts  m4b-catalog.spec.ts  m4c-explorer.spec.ts  m5-document-detail.spec.ts  m6-query-viz.spec.ts  m7-polish.spec.ts  public-catalog.spec.ts
frontend/tests-e2e/_fixtures/: README.md  test.ts
infra/: Dockerfile  docker-compose.yml  railway.toml
scripts/: check-bundle-size.mjs  refresh-e2e-fixtures.py  rollout-health-probe.py
(+44 files in other folders)
