[project]
name = "ndi-data-browser-v2-backend"
version = "2.0.0"
description = "NDI Data Browser v2 backend — cloud-first proxy + enricher"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "httpx[http2]>=0.27.0",
    "redis>=5.0.0",
    "cachetools>=5.4.0",
    "cryptography>=43.0.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.20.0",
    "python-multipart>=0.0.9",
    "Pillow>=10.4.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "scipy>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "respx>=0.22.0",
    "hypothesis>=6.110.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "fakeredis>=2.24.0",
    "httpx-ws>=0.7.0",
    "freezegun>=1.5.0",
]
observability = [
    "opentelemetry-api>=1.26.0",
    "opentelemetry-sdk>=1.26.0",
    "opentelemetry-instrumentation-fastapi>=0.47b0",
    "opentelemetry-instrumentation-httpx>=0.47b0",
    "sentry-sdk>=2.13.0",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "A", "C4",
    "SIM", "ARG", "PTH", "ERA", "PL", "RUF",
]
ignore = [
    "E501",     # long lines — tolerated, formatter handles it
    "PLR0913",  # too many args — FastAPI handler signatures
    "PLR2004",  # magic numbers — HTTP codes, retry counts
    # --- Intentional style choices in this codebase ---
    "N818",     # error names (AuthExpired, NotFound) deliberately match HTTP semantics, not `*Error`
    "N815",     # mixedCase class attrs — Pydantic models mirror JSON API field names
    "N803",     # camelCase param names in models mirroring API shape
    "PLC0415",  # non-top-level imports — used for circular-avoidance + lazy loading
    "UP042",    # StrEnum migration — avoid until we drop 3.11 support widely
    "ARG001",   # unused args — FastAPI handlers inject Request but handler may not use it
    "UP046",    # new generics syntax — lint churn
    "BLE001",   # blind Exception — intentional in fallback log paths
    "RUF012",   # mutable class defaults — Pydantic + dataclass field patterns
]

[tool.mypy]
python_version = "3.12"
# Strict mode is the enforced bar for source code. Tests are checked in a
# laxer mode (see override below) — they're allowed to omit return types on
# pytest fixtures and use untyped `dict` literals for fixture data.
strict = true
plugins = ["pydantic.mypy"]
# mypy's `exclude` is a regex matched against each candidate file path. CI runs
# mypy from the repo root as `mypy backend/` (paths look like `backend/tests/…`),
# but local runs from inside `backend/` see `tests/…`. Match both.
exclude = ["(^|/)tests/"]

# Optional subsystems: opentelemetry is gated behind the `observability` extra
# and only imported under `try/except ImportError`; cachetools and scipy don't
# publish type stubs that track their current APIs. Fall back to implicit Any
# for these packages only.
[[tool.mypy.overrides]]
module = [
    "cachetools",
    "cachetools.*",
    "scipy",
    "scipy.*",
    "opentelemetry",
    "opentelemetry.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=. --cov-report=term-missing --cov-report=xml"
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
