[project]
name = "ndi-data-browser-v2-backend"
version = "2.0.0"
description = "NDI Data Browser v2 backend — cloud-first proxy + enricher"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "httpx[http2]>=0.27.0",
    "redis>=5.0.0",
    "cachetools>=5.4.0",
    "cryptography>=43.0.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.20.0",
    "python-multipart>=0.0.9",
    "Pillow>=10.4.0",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    # pandas was declared but never imported anywhere in backend/. Removed
    # in audit 2026-04-23 (#58) — it was a ~30 MB wheel for no runtime
    # use. If a future feature needs it, re-add with a comment pointing
    # at the specific caller.
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "respx>=0.22.0",
    "hypothesis>=6.110.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-cachetools>=5.4.0",
    "fakeredis>=2.24.0",
    "httpx-ws>=0.7.0",
    "freezegun>=1.5.0",
]
observability = [
    "opentelemetry-api>=1.26.0",
    "opentelemetry-sdk>=1.26.0",
    "opentelemetry-instrumentation-fastapi>=0.47b0",
    "opentelemetry-instrumentation-httpx>=0.47b0",
    "sentry-sdk>=2.13.0",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "A", "C4",
    "SIM", "ARG", "PTH", "ERA", "PL", "RUF",
    "TID",      # flake8-tidy-imports — enforces ADR-009 services/httpx ban
]
ignore = [
    "E501",     # long lines — tolerated, formatter handles it
    "PLR0913",  # too many args — FastAPI handler signatures
    "PLR2004",  # magic numbers — HTTP codes, retry counts
    # --- Intentional style choices in this codebase ---
    "N818",     # error names (AuthExpired, NotFound) deliberately match HTTP semantics, not `*Error`
    "N815",     # mixedCase class attrs — Pydantic models mirror JSON API field names
    "N803",     # camelCase param names in models mirroring API shape
    "PLC0415",  # non-top-level imports — used for circular-avoidance + lazy loading
    "UP042",    # StrEnum migration — avoid until we drop 3.11 support widely
    "ARG001",   # unused args — FastAPI handlers inject Request but handler may not use it
    "UP046",    # new generics syntax — lint churn
    "BLE001",   # blind Exception — intentional in fallback log paths
    "RUF012",   # mutable class defaults — Pydantic + dataclass field patterns
    "TID252",   # relative imports — idiomatic within this package
]

# ADR-009: enforce that services/ don't make direct HTTP calls. The ban
# applies globally (TID251); `per-file-ignores` below carves out the legitimate
# consumers: `clients/ndi_cloud.py` (the cloud client that *is* the boundary)
# and `services/ontology_service.py` (external ontology providers — documented
# carve-out in ADR-009). Covers the three common Python HTTP libraries so a
# future contributor can't bypass the rule by switching `httpx` -> `requests`.
[tool.ruff.lint.flake8-tidy-imports.banned-api]
"httpx".msg = "Do not import httpx inside backend/services/. Cloud I/O lives in backend/clients/ndi_cloud.py. See ADR-009 for the OntologyService carve-out."
"requests".msg = "Do not import requests inside backend/services/. Cloud I/O lives in backend/clients/ndi_cloud.py. See ADR-009."
"aiohttp".msg = "Do not import aiohttp inside backend/services/. Cloud I/O lives in backend/clients/ndi_cloud.py. See ADR-009."
"urllib3".msg = "Do not import urllib3 inside backend/services/. Cloud I/O lives in backend/clients/ndi_cloud.py. See ADR-009."

[tool.ruff.lint.per-file-ignores]
"backend/clients/*.py" = ["TID251"]                 # clients/ owns HTTP to ndi-cloud-node
"clients/*.py" = ["TID251"]                          # same path when ruff runs from inside backend/
"backend/services/ontology_service.py" = ["TID251"] # ADR-009 carve-out for external ontology providers
"services/ontology_service.py" = ["TID251"]          # same path when ruff runs from inside backend/
"backend/tests/**/*.py" = ["TID251"]                # tests legitimately use httpx for respx mocks
"tests/**/*.py" = ["TID251"]                         # same path when ruff runs from inside backend/

[tool.mypy]
python_version = "3.12"
# Strict mode is the enforced bar for source code. Tests are checked in a
# laxer mode (see override below) — they're allowed to omit return types on
# pytest fixtures and use untyped `dict` literals for fixture data.
strict = true
plugins = ["pydantic.mypy"]
# mypy's `exclude` is a regex matched against each candidate file path. CI runs
# mypy from the repo root as `mypy backend/` (paths look like `backend/tests/…`),
# but local runs from inside `backend/` see `tests/…`. Match both.
exclude = ["(^|/)tests/"]

# Optional subsystems: opentelemetry is gated behind the `observability` extra
# and only imported under `try/except ImportError`; scipy doesn't publish type
# stubs that track its current API. Fall back to implicit Any for those.
# (cachetools: use `types-cachetools` from the dev extra — listed below.)
[[tool.mypy.overrides]]
module = [
    "scipy",
    "scipy.*",
    "opentelemetry",
    "opentelemetry.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=. --cov-report=term-missing --cov-report=xml"
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
fail_under = 70  # Matches CLAUDE.md claim. Raise with intention, not by accident.
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
